dnl on commits of this file autogen.sh will be rerun online
AC_INIT([gstreamer-www], [0.0])
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([
Makefile
htdocs/Makefile
htdocs/artwork/Makefile
htdocs/apps/Makefile
htdocs/bindings/Makefile
htdocs/bugs/Makefile
htdocs/conference/Makefile
htdocs/conference/2010/Makefile
htdocs/conference/2011/Makefile
htdocs/conference/2012/Makefile
htdocs/conference/2013/Makefile
htdocs/conference/2014/Makefile
htdocs/conference/2015/Makefile
htdocs/dev/Makefile
htdocs/documentation/Makefile
htdocs/download/Makefile
htdocs/features/Makefile
htdocs/images/Makefile
htdocs/lists/Makefile
htdocs/modules/Makefile
htdocs/news/Makefile
htdocs/planet/Makefile
htdocs/releases/Makefile
htdocs/releases/gst-editing-services/Makefile
htdocs/releases/gst-editor/Makefile
htdocs/releases/gst-ffmpeg/Makefile
htdocs/releases/gst-libav/Makefile
htdocs/releases/gst-monkeysaudio/Makefile
htdocs/releases/gst-openmax/Makefile
htdocs/releases/gst-player/Makefile
htdocs/releases/gst-plugins/Makefile
htdocs/releases/gst-plugins-bad/Makefile
htdocs/releases/gst-plugins-base/Makefile
htdocs/releases/gst-plugins-gl/Makefile
htdocs/releases/gst-plugins-good/Makefile
htdocs/releases/gst-plugins-ugly/Makefile
htdocs/releases/gst-python/Makefile
htdocs/releases/gst-rtsp-server/Makefile
htdocs/releases/gstreamer/Makefile
htdocs/releases/gstreamer-sharp/Makefile
htdocs/releases/gnonlin/Makefile
htdocs/releases/gst-omx/Makefile
htdocs/releases/gst-validate/Makefile
htdocs/projects/Makefile
])
AC_OUTPUT
