dnl on commits of this file autogen.sh will be rerun online
AC_INIT([gstreamer-www], [0.0])
AM_INIT_AUTOMAKE

AC_SUBST(XSLTPROC_ARGS, [-nonet])

# Enable raw HTML and the tables extension for markdown
AC_SUBST(CMARK_ARGS, ["--unsafe -e table"])

AC_CONFIG_FILES([
Makefile
htdocs/Makefile
htdocs/artwork/Makefile
htdocs/apps/Makefile
htdocs/bindings/Makefile
htdocs/conference/Makefile
htdocs/conference/2010/Makefile
htdocs/conference/2011/Makefile
htdocs/conference/2012/Makefile
htdocs/conference/2013/Makefile
htdocs/conference/2014/Makefile
htdocs/conference/2015/Makefile
htdocs/conference/2016/Makefile
htdocs/conference/2017/Makefile
htdocs/conference/2018/Makefile
htdocs/conference/2019/Makefile
htdocs/conference/2023/Makefile
htdocs/conference/2024/Makefile
htdocs/dev/Makefile
htdocs/download/Makefile
htdocs/features/Makefile
htdocs/images/Makefile
htdocs/lists/Makefile
htdocs/modules/Makefile
htdocs/news/Makefile
htdocs/releases/Makefile
htdocs/releases/1.6/Makefile
htdocs/releases/1.8/Makefile
htdocs/releases/1.10/Makefile
htdocs/releases/1.12/Makefile
htdocs/releases/1.14/Makefile
htdocs/releases/1.16/Makefile
htdocs/releases/1.18/Makefile
htdocs/releases/1.20/Makefile
htdocs/releases/1.22/Makefile
htdocs/releases/1.24/Makefile
htdocs/releases/1.26/Makefile
htdocs/projects/Makefile
htdocs/security/Makefile
])
AC_OUTPUT
