dnl on commits of this file autogen.sh will be rerun online
AC_INIT
AM_INIT_AUTOMAKE(gstreamer-www, 0.0)

AC_OUTPUT([
Makefile
htdocs/Makefile
htdocs/apps/Makefile
htdocs/bugs/Makefile
htdocs/dev/Makefile
htdocs/documentation/Makefile
htdocs/features/Makefile
htdocs/images/Makefile
htdocs/lists/Makefile
htdocs/modules/Makefile
htdocs/news/Makefile
htdocs/releases/Makefile
htdocs/releases/gstreamer/Makefile
htdocs/releases/gst-player/Makefile
htdocs/releases/gst-plugins/Makefile
htdocs/tasks/Makefile
])
