dnl on commits of this file autogen.sh will be rerun online
AC_INIT
AM_INIT_AUTOMAKE(gstreamer-www, 0.0)

AC_OUTPUT([
Makefile
htdocs/Makefile
htdocs/apps/Makefile
htdocs/bindings/Makefile
htdocs/bugs/Makefile
htdocs/dev/Makefile
htdocs/documentation/Makefile
htdocs/download/Makefile
htdocs/features/Makefile
htdocs/images/Makefile
htdocs/lists/Makefile
htdocs/modules/Makefile
htdocs/news/Makefile
htdocs/releases/Makefile
htdocs/releases/gst-editor/Makefile
htdocs/releases/gst-ffmpeg/Makefile
htdocs/releases/gst-monkeysaudio/Makefile
htdocs/releases/gst-player/Makefile
htdocs/releases/gst-plugins/Makefile
htdocs/releases/gst-python/Makefile
htdocs/releases/gstreamer/Makefile
htdocs/tasks/Makefile
])
