dnl on commits of this file autogen.sh will be rerun online
AC_INIT
AM_INIT_AUTOMAKE(gstreamer-www, 0.0)

AC_OUTPUT([
Makefile
htdocs/Makefile
htdocs/artwork/Makefile
htdocs/apps/Makefile
htdocs/bindings/Makefile
htdocs/bugs/Makefile
htdocs/conference/Makefile
htdocs/conference/2010/Makefile
htdocs/dev/Makefile
htdocs/documentation/Makefile
htdocs/download/Makefile
htdocs/features/Makefile
htdocs/images/Makefile
htdocs/lists/Makefile
htdocs/modules/Makefile
htdocs/news/Makefile
htdocs/planet/Makefile
htdocs/releases/Makefile
htdocs/releases/gst-editing-services/Makefile
htdocs/releases/gst-editor/Makefile
htdocs/releases/gst-ffmpeg/Makefile
htdocs/releases/gst-monkeysaudio/Makefile
htdocs/releases/gst-openmax/Makefile
htdocs/releases/gst-player/Makefile
htdocs/releases/gst-plugins/Makefile
htdocs/releases/gst-plugins-bad/Makefile
htdocs/releases/gst-plugins-base/Makefile
htdocs/releases/gst-plugins-gl/Makefile
htdocs/releases/gst-plugins-good/Makefile
htdocs/releases/gst-plugins-ugly/Makefile
htdocs/releases/gst-python/Makefile
htdocs/releases/gstreamer/Makefile
htdocs/releases/gstreamer-sharp/Makefile
htdocs/releases/gnonlin/Makefile
])
