SUBDIRS = 

built_pages = index.html studentinfo.html socprojects.html opengl.html \
              opencvgesturedetection.html windows.html zrtp.html \
              chaptersupport.html editingplugins.html rust.html orc.html \
              closed_captioning_support.html gstjava.html gstlua.html \
              gstplayer.html

include $(top_srcdir)/html.make
