# copied from copy/
images = \
	GStreamer_Conference_Berlin-banner-300px.png \
	GStreamer_Conference_Berlin-banner-wide-270px.png \
	header-logo-top.png header-logo-bottom.png header-osmf.png \
	favicon.png \
	favicon-16.png \
	favicon-32.png \
	favicon-57.png \
	favicon-76.png \
	favicon-96.png \
	favicon-120.png \
	favicon-128.png \
	favicon-152.png \
	favicon-180.png \
	favicon-192.png \
	favicon-196.png \
	favicon-228.png \
	slash.png backslash.png \
	1x1.gif

include $(top_srcdir)/html.make
