SUBDIRS =

built_pages = gsoc.html studentinfo.html index.html opengl.html \
              opencvgesturedetection.html windows.html zrtp.html \
              chaptersupport.html editingplugins.html rust.html orc.html \
              gstjava.html gstlua.html gstplayer.html gsthaskell.html \
              staticorc.html dashwebm.html subtitles.html

include $(top_srcdir)/html.make
