built_pages = index.html gstreamer-conference-timetable.html speakers.html

images = \
	sponsor_150x54_igalia.png      \
	sponsor_150x45_UbiCast.png     \
	sponsor_150x49_collabora.png   \
	sponsor_149x36_fluendo.png     \
	sponsor_150x50_google.png      \
	sponsor_150_35_entropywave.png \
	lwn.png phoronix.png

include $(top_srcdir)/html.make
