#gstreamer-conference-timetable.html speakers.html
built_pages = index.html

#images = \
#	sponsor_150x54_igalia.png      \
#	sponsor_150x45_UbiCast.png     \
#	sponsor_150x49_collabora.png   \
#	sponsor_149x36_fluendo.png     \
#	sponsor_150x50_google.png      \
#	sponsor_150_35_entropywave.png \
#	lwn.png phoronix.png

#documents = \
#	gstreamer-sponsor.pdf

#gstreamer-sponsor.pdf:
#	cp $(top_srcdir)/copy/documents/gstreamer-sponsor-2012.pdf gstreamer-sponsor.pdf

include $(top_srcdir)/html.make
