# speakers.html schedule.html
built_pages = index.html

# phoronix.png sponsor_150x54_igalia.png
# sponsor_150x45_UbiCast.png
# sponsor_150x49_collabora.png
#sponsor_149x36_fluendo.png
#sponsor_150x50_google.png
#lwn.png
images = Medienhafen_Duesseldorf_Nacht-cropped.jpg

#documents = \
#	gstreamer-sponsor.pdf

#gstreamer-sponsor.pdf:
#	cp $(top_srcdir)/copy/documents/gstreamer-sponsor-2012.pdf gstreamer-sponsor.pdf

include $(top_srcdir)/html.make
