built_pages = index.html schedule.html speakers.html

#phoronix.png sponsor_150x54_igalia.png
#sponsor_150x49_collabora.png
#sponsor_149x36_fluendo.png
#lwn.png
images = \
	Medienhafen_Duesseldorf_Nacht-cropped.jpg \
	sponsor_150x45_UbiCast.png \
	sponsor_305x50_collabora_new.png \
	sponsor_150x78_collabora_new.png \
	sponsor_305x50_centricular.png \
	sponsor_150x50_google.png

documents = \
	gstreamer-conference-sponsor-brief-2014.pdf

gstreamer-conference-sponsor-brief-2014.pdf:
	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2014.pdf gstreamer-conference-sponsor-brief-2014.pdf

include $(top_srcdir)/html.make
