built_pages = index.html schedule.html speakers.html

#ccd.jpg
#sponsor_305x50_collabora_new.png
#sponsor_150x78_collabora_new.png
#lwn.png
images = \
	sponsor_ubicast_821x240.png \
	sponsor_centricular_753x125.png \
	sponsor_google_538x190.png

documents = \
	gstreamer-conference-sponsor-brief-2015.pdf

gstreamer-conference-sponsor-brief-2015.pdf:
	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2015.pdf gstreamer-conference-sponsor-brief-2015.pdf

include $(top_srcdir)/html.make
