built_pages = index.html #schedule.html talks-and-speakers.html

#ccd.jpg
#sponsor_305x50_collabora_new.png
#sponsor_150x78_collabora_new.png
#lwn.png
#images = \
#	lwn-logo-gstconf2015.png \
#	sponsor_ubicast_640x195.png \
#	sponsor_ubicast_821x240.png \
#	sponsor_centricular_753x125.png \
#	sponsor_1722x282_collabora.png \
#	sponsor_igalia_2015_2019x720.png \
#	sponsor_pexip.png \
#	sponsor_google_538x190.png

#documents = \
#	gstreamer-conference-sponsor-brief-2015.pdf

#gstreamer-conference-sponsor-brief-2015.pdf:
#	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2015.pdf gstreamer-conference-sponsor-brief-2015.pdf

include $(top_srcdir)/html.make
