built_pages = index.html talks-and-speakers.html schedule.html

#ccd.jpg
#lwn.png

#	lwn-logo-gstconf2015.png
#	sponsor_google_538x190.png

images = \
	sponsor_ubicast_640x195.png \
	sponsor_centricular_753x125.png \
	sponsor_collabora_02_rgb_965x504.png \
        sponsor_facebook_960x263.png \
        sponsor_fluendo_320x74.png \
	sponsor_igalia_2015_2019x720.png \
	sponsor_pexip.png \
        sponsor_kinvolk_394x394.png

documents = \
	gstreamer-conference-sponsor-brief-2016.pdf

gstreamer-conference-sponsor-brief-2016.pdf:
	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2016.pdf gstreamer-conference-sponsor-brief-2016.pdf

include $(top_srcdir)/html.make
