#schedule.html talks-and-speakers.html
built_pages = index.html

images = \
	sponsor_collabora_02_rgb_965x504.png \
	sponsor_facebook_960x263.png \
	sponsor_fluendo_320x74.png \
	sponsor_igalia_2015_2019x720.png \
	sponsor_pexip.png \
	sponsor_ubicast_640x195.png \
	sponsor_centricular_753x125.png \
	node5.png \
	banner-prague.jpg
#	sponsor_google_538x190.png

documents = gstreamer-conference-sponsor-brief-2018.pdf

gstreamer-conference-sponsor-brief-2018.pdf:
	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2018.pdf gstreamer-conference-sponsor-brief-2018.pdf

include $(top_srcdir)/html.make
