# talks-and-speakers.html schedule.html
built_pages = index.html

# image from https://indico.freedesktop.org/event/4/images/68-orzan-corunha-low.jpg
images = acoruna_banner.jpg \
  sponsor_axis.png \
  sponsor_igalia_2015_2019x720.png \
  sponsor_ubicast_640x195.png

#	sponsor_collabora_02_rgb_965x504.png
#	sponsor_pexip_2019_965x261.png
#	sponsor_fluendo_320x74.png
#	sponsor_centricular_753x125.png
#	sponsor_zeiss.png
#	sponsor_facebook_960x263.png

documents = gstreamer-conference-sponsor-brief-2023.pdf

gstreamer-conference-sponsor-brief-2023.pdf:
	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2023.pdf gstreamer-conference-sponsor-brief-2023.pdf

include $(top_srcdir)/html.make
