# talks-and-speakers.html schedule.html
built_pages = index.html

images = \
  sponsor_igalia_2015_2019x720.png \
  montreal_banner.jpg

documents = gstreamer-conference-sponsor-brief-2024.pdf

gstreamer-conference-sponsor-brief-2024.pdf:
	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2024.pdf gstreamer-conference-sponsor-brief-2024.pdf

include $(top_srcdir)/html.make
