# talks-and-speakers.html schedule.html
built_pages = index.html

images = \
  sponsor_asymptotic_2024.png \
  sponsor_centricular_753x125.png \
  sponsor_collabora_02_rgb_2024.png \
  sponsor_igalia_2015_2019x720.png \
  sponsor_laerdal_2024.png \
  sponsor_sat_2025_2630x644.png \
  montreal_banner.jpg

documents = gstreamer-conference-sponsor-brief-2024.pdf

gstreamer-conference-sponsor-brief-2024.pdf:
	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2024.pdf gstreamer-conference-sponsor-brief-2024.pdf

include $(top_srcdir)/html.make
