# talks-and-speakers.html schedule.html
built_pages = index.html

images = london_banner.jpg \
  sponsor_axis.png \
  sponsor_centricular_753x125.png \
  sponsor_collabora_02_rgb_2024.png \
  sponsor_igalia_2015_2019x720.png \
  sponsor_mediascribe.svg \
  sponsor_pexip_2019_965x261.png \
  sponsor_ubicast_1059x292.png \
  sponsor_veo.png \
  $(NULL)

#  sponsor_cablecast.png \
#  sponsor_fluendo_1060x200.png \
#  sponsor_genius_sports.png \
#  sponsor_laerdal_2024.png \
#  sponsor_sat_2025_2630x644.png

documents = gstreamer-conference-sponsor-brief-2025.pdf

gstreamer-conference-sponsor-brief-2025.pdf:
	cp $(top_srcdir)/copy/documents/gstreamer-conference-sponsor-brief-2025.pdf gstreamer-conference-sponsor-brief-2025.pdf

include $(top_srcdir)/html.make
